Fixed bug on choosing departure date